--- a/profiles.yml
+++ b/profiles.yml
@@ -5,7 +5,7 @@ pagila:
       type: postgres
       host: "0.0.0.0"
       user: gregory
-      password: mypassword
+      password: "{{ env_var('DBT_ENV_SECRET_PASSWORD') }}"
       port: 5432
       dbname: postgres
       schema: dbt_gregory
@@ -17,10 +17,10 @@ pagila:
       type: postgres
       host: "0.0.0.0"
       user: gregory
-      password: mypassword
+      password: "{{ env_var('DBT_ENV_SECRET_PASSWORD') }}"
       port: 5432
-      dbname: analytics
-      schema: production
+      dbname: postgres
+      schema: prod
       threads: 1
       keepalives_idle: 0 # default 0, indicating the system default. See below
       connect_timeout: 10 # default 10 seconds
