--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -10,6 +10,7 @@ seed-paths: ["seeds"]
 test-paths: ["tests"]
 analysis-paths: ["analysis"]
 macro-paths: ["macros"]
+asset-paths: ["assets"]
 
 target-path: "target"
 clean-targets:
