add pagila.city docs and tests

--- a/models/staging/pagila/_pagila__sources.yml
+++ b/models/staging/pagila/_pagila__sources.yml
@@ -65,11 +65,24 @@ sources:
             description: '{{ doc("category__last_update") }}'
 
       - name: city
+        description: '{{ doc("city") }}'
         columns:
           - name: city_id
+            description: '{{ doc("city__city_id") }}'
+            tests:
+              - not_null
+              - unique
           - name: city
+            description: '{{ doc("city__city") }}'
           - name: country_id
+            description: '{{ doc("city__country_id") }}'
+            tests:
+              - not_null
+              - relationships:
+                  to: '{{ source("pagila", "country") }}'
+                  field: country_id
           - name: last_update
+            description: '{{ doc("city__last_update") }}'
 
       - name: country
         columns:
