configure project validation severity according to target.name

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,3 +24,10 @@ models:
   pagila:
       staging:
         +materialized: view
+
+tests:
+  dbt_project_evaluator:
+    +severity: |
+      {%- if target.name == "ci" -%} error
+      {%- else -%} warn
+      {%- endif -%}
