--- a/profiles.yml
+++ b/profiles.yml
@@ -8,7 +8,7 @@ pagila:
       password: "{{ env_var('DBT_ENV_SECRET_PASSWORD') }}"
       port: 5432
       dbname: postgres
-      schema: dbt_gregory
+      schema: dbt_gregory_dev
       threads: 1
       keepalives_idle: 0 # default 0, indicating the system default. See below
       connect_timeout: 10 # default 10 seconds
@@ -20,7 +20,7 @@ pagila:
       password: "{{ env_var('DBT_ENV_SECRET_PASSWORD') }}"
       port: 5432
       dbname: postgres
-      schema: dbt_gregory
+      schema: dbt_gregory_ci
       threads: 1
       keepalives_idle: 0 # default 0, indicating the system default. See below
       connect_timeout: 10 # default 10 seconds
