--- a/models/staging/pagila/_pagila__sources.yml
+++ b/models/staging/pagila/_pagila__sources.yml
@@ -9,45 +9,41 @@ sources:
         columns:
           - name: actor_id
             description: '{{ doc("actor__actor_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: first_name
             description: '{{ doc("actor__first_name") }}'
-            tests:
-              - is_upper_case
+            
           - name: last_name
             description: '{{ doc("actor__last_name") }}'
-            tests:
-              - is_upper_case
+            
           - name: last_update
             description: '{{ doc("actor__last_update") }}'
+
 
       - name: address
         description: '{{ doc("address") }}'
         columns:
           - name: address_id
             description: '{{ doc("address__address_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: address
             description: '{{ doc("address__address") }}'
+
           - name: address2
             description: '{{ doc("address__address2") }}'
+
           - name: district
             description: '{{ doc("address__district") }}'
+
           - name: city_id
             description: '{{ doc("address__city_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "city") }}'
-                  field: city_id
+            
           - name: postal_code
             description: '{{ doc("address__postal_code") }}'
+
           - name: phone
             description: '{{ doc("address__phone") }}'
+
           - name: last_update
             description: '{{ doc("address__last_update") }}'
 
@@ -56,31 +52,28 @@ sources:
         columns:
           - name: category_id
             description: '{{ doc("category__category_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: name
             description: '{{ doc("category__name") }}'
+
           - name: last_update
             description: '{{ doc("category__last_update") }}'
+
+          - name: _loaded_at
+            description: '{{ doc("_loaded_at") }}'
 
       - name: city
         description: '{{ doc("city") }}'
         columns:
           - name: city_id
             description: '{{ doc("city__city_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: city
             description: '{{ doc("city__city") }}'
+
           - name: country_id
             description: '{{ doc("city__country_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "country") }}'
-                  field: country_id
+            
           - name: last_update
             description: '{{ doc("city__last_update") }}'
 
@@ -89,13 +82,10 @@ sources:
         columns:
           - name: country_id
             description: '{{ doc("country__country_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: country
             description: '{{ doc("country__country") }}'
-            tests:
-              - not_null
+
           - name: last_update
             description: '{{ doc("country__last_update")}}'
 
@@ -104,38 +94,31 @@ sources:
         columns:
           - name: customer_id
             description: '{{ doc("customer__customer_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: store_id
             description: '{{ doc("customer__store_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "store") }}'
-                  field: store_id
+            
           - name: first_name
             description: '{{ doc("customer__first_name") }}'
-            tests:
-              - is_upper_case
+            
           - name: last_name
             description: '{{ doc("customer__last_name") }}'
-            tests:
-              - is_upper_case
+            
           - name: email
             description: '{{ doc("customer__email") }}'
+
           - name: address_id
             description: '{{ doc("customer__address_id") }}'
-            tests:
-              - relationships:
-                  to: '{{ source("pagila", "address") }}'
-                  field: address_id
+            
           - name: activebool
             description: '{{ doc("customer__activebool") }}'
+
           - name: create_date
             description: '{{ doc("customer__create_date") }}'
+
           - name: last_update
             description: '{{ doc("customer__last_update") }}'
+
           - name: active
             description: '{{ doc("customer__active") }}'
 
@@ -144,38 +127,43 @@ sources:
         columns:
           - name: film_id
             description: '{{ doc("film__film_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: title
             description: '{{ doc("film__title") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: description
             description: '{{ doc("film__description") }}'
+
           - name: release_year
             description: '{{ doc("film__release_year") }}'
+
           - name: language_id
             description: '{{ doc("film__language_id") }}'
+
           - name: original_language_id
             description: '{{ doc("film__original_language_id") }}'
+
           - name: rental_duration
             description: '{{ doc("film__rental_duration") }}'
+
           - name: rental_rate
             description: '{{ doc("film__rental_rate") }}'
-            tests:
-              - is_greater_than_zero
+
           - name: length
             description: '{{ doc("film__length") }}'
+
           - name: replacement_cost
             description: '{{ doc("film__replacement_cost") }}'
+
           - name: rating
             description: '{{ doc("film__rating") }}'
+
           - name: last_update
             description: '{{ doc("film__last_update") }}'
+
           - name: special_features
             description: '{{ doc("film__special_features") }}'
+
           - name: fulltext
             description: '{{ doc("film__fulltext") }}'
 
@@ -184,18 +172,10 @@ sources:
         columns:
           - name: actor_id
             description: '{{ doc("film_actor__actor_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "actor") }}'
-                  field: actor_id
+            
           - name: film_id
             description: '{{ doc("film_actor__film_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila","film") }}'
-                  field: film_id
+            
           - name: last_update
             description: '{{ doc("film_actor__last_update") }}'
 
@@ -204,18 +184,10 @@ sources:
         columns:
           - name: film_id
             description: '{{ doc("film_category__film_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "film") }}'
-                  field: film_id
+            
           - name: category_id
             description: '{{ doc("film_category__category_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "category") }}'
-                  field: category_id
+            
           - name: last_update
             description: '{{ doc("film_category__last_update") }}'
 
@@ -224,23 +196,13 @@ sources:
         columns:
           - name: inventory_id
             description: '{{ doc("inventory__inventory_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: film_id
             description: '{{ doc("inventory__film_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "film") }}'
-                  field: film_id
+            
           - name: store_id
             description: '{{ doc("inventory__store_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "store") }}'
-                  field: store_id
+            
           - name: last_update
             description: '{{ doc("inventory__last_update") }}'
 
@@ -249,14 +211,10 @@ sources:
         columns:
           - name: language_id
             description: '{{ doc("language__language_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: name
             description: '{{ doc("language__name") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: last_update
             description: '{{ doc("language__last_update") }}'
 
@@ -265,98 +223,87 @@ sources:
         columns:
           - name: payment_id
             description: '{{ doc("payment__payment_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: customer_id
             description: '{{ doc("payment__customer_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "customer") }}'
-                  field: customer_id
+            
           - name: staff_id
             description: '{{ doc("payment__staff_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "staff") }}'
-                  field: staff_id
+            
           - name: rental_id
             description: '{{ doc("payment__rental_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila","rental") }}'
-                  field: rental_id
+            
           - name: amount
             description: '{{ doc("payment__amount") }}'
             tests:
               - is_greater_than_zero
+
           - name: payment_date
             description: '{{ doc("payment__payment_date") }}'
+
+          - name: _loaded_at
+            description: '{{ doc("_loaded_at") }}'
 
       - name: rental
         description: '{{ doc("rental") }}'
         columns:
           - name: rental_id
             description: '{{ doc("rental__rental_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: rental_date
             description: '{{ doc("rental__rental_date") }}'
+
           - name: inventory_id
             description: '{{ doc("rental__inventory_id") }}'
+
           - name: customer_id
             description: '{{ doc("rental__customer_id") }}'
+
           - name: return_date
             description: '{{ doc("rental__return_date") }}'
+
           - name: staff_id
             description: '{{ doc("rental__staff_id") }}'
+
           - name: last_update
             description: '{{ doc("rental__last_update") }}'
+
+          - name: _loaded_at
+            description: '{{ doc("_loaded_at") }}'
 
       - name: staff
         description: '{{ doc("staff") }}'
         columns:
           - name: staff_id
             description: '{{ doc("staff__staff_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: first_name
             description: '{{ doc("staff__first_name") }}'
-            tests:
-              - is_capitalized
+            
           - name: last_name
             description: '{{ doc("staff__last_name") }}'
-            tests:
-              - is_capitalized
+            
           - name: address_id
             description: '{{ doc("staff__address_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "address") }}'
-                  field: address_id
+            
           - name: email
             description: '{{ doc("staff__email") }}'
+
           - name: store_id
             description: '{{ doc("staff__store_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "store") }}'
-                  field: store_id
+            
           - name: active
             description: '{{ doc("staff__active") }}'
+
           - name: username
             description: '{{ doc("staff__username") }}'
+
           - name: password
             description: '{{ doc("staff__password") }}'
+
           - name: last_update
             description: '{{ doc("staff__last_update") }}'
+
           - name: picture
             description: '{{ doc("staff__picture") }}'
 
@@ -365,22 +312,12 @@ sources:
         columns:
           - name: store_id
             description: '{{ doc("store__store_id") }}'
-            tests:
-              - not_null
-              - unique
+            
           - name: manager_staff_id
             description: '{{ doc("store__manager_staff_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "staff") }}'
-                  field: staff_id
+            
           - name: address_id
             description: '{{ doc("store__address_id") }}'
-            tests:
-              - not_null
-              - relationships:
-                  to: '{{ source("pagila", "address") }}'
-                  field: address_id
+            
           - name: last_update
             description: '{{ doc("store__last_update") }}'
